# LearnSelenium

./: links.txt  pyproject.toml
chrome/: main_chrome.py
