[tool.poetry]
name = "learn-selen"
version = "0.1.0"
description = ""
authors = ["Nikita Sh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_selen"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
